tests/derive-tests/from_variant/fail/struct.err.txt
error: Only enums can use this derive
 --> /tests/derive-tests/from_variant/fail/struct.rs:4:12
  |
4 | pub struct Struct {
  |            ^^^^^^
